[package]
name = "netascii"
version = "0.1.0"
authors = ["Melvin van der Linde"]
edition = "2021"
rust-version = "1.81.0"
description = "Iterator adaptors for encoding and decoding netascii as according to RFC 854."
documentation = "https://docs.rs/netascii"
license = "MIT OR Apache-2.0"
keywords = ["netascii", "encoding"]
categories = ["no-std", "no-std::no-alloc", "encoding"]
