[package]
name = "netascii"
version = "0.1.0"
authors = ["Melvin van der Linde"]
edition = "2021"
rust-version = "1.81.0"
documentation = "https://docs.rs/netascii"

description = "Iterator adaptors for encoding and decoding netascii as according to RFC 854."
categories = ["no-std", "no-std::no-alloc", "encoding"]
keywords = ["netascii", "encoding"]

license = "MIT OR Apache-2.0"
